server: Increase RLIMIT_NOFILE to the maximum allowed

VTE uses up to 8 FDs per terminal, so we'll exhaust the default (1024)
quite soon (~120 terminals). Apparently people have actually hit this
limit; so let's increase it.

https://bugzilla.gnome.org/show_bug.cgi?id=646098
https://bugzilla.redhat.com/show_bug.cgi?id=667539